add greenhouse stats logic, no tests
